[gd_scene load_steps=16 format=2]

[ext_resource path="res://Shadows/LargeShadow.png" type="Texture" id=1]
[ext_resource path="res://World/dead_solider2.png" type="Texture" id=2]
[ext_resource path="res://Dialogue Headshots/main_player_face_still.png" type="Texture" id=3]
[ext_resource path="res://World/soldier_corpse_1.gd" type="Script" id=4]
[ext_resource path="res://UI/panel_Example2.png" type="Texture" id=5]
[ext_resource path="res://fonts/PixelTandysoft-0rJG.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://UI/UI_Panel_Blue_3d.png" type="Texture" id=7]
[ext_resource path="res://World/tactical_flashlight.png" type="Texture" id=8]
[ext_resource path="res://Music and Sounds/ESM_Micro_Bot_Machine_Chatter_Sci_Fi_Robot_Robotic_Glitch_Morph_Mechanism_Texture.wav" type="AudioStream" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 22.7273
height = 16.9091

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.282353, 0.282353, 0.282353, 1 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 6 )

[sub_resource type="CircleShape2D" id=4]
radius = 61.8182

[sub_resource type="DynamicFont" id=5]
size = 10
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.537255, 0.862745, 0.313726, 0.454902 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="SoldierCorpse1" type="StaticBody2D"]
scale = Vector2( 1.1, 1.1 )
script = ExtResource( 4 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( -5.45455, 6.36364 )
scale = Vector2( 1.25, 0.8 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -25 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -2.72727, -19.0909 )
shape = SubResource( 1 )

[node name="Popup" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.3, 0.3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Popup"]
texture = ExtResource( 5 )

[node name="Panel" type="Panel" parent="Popup"]
margin_left = -182.0
margin_top = -33.0
margin_right = -114.0
margin_bottom = 35.0
custom_styles/panel = SubResource( 2 )

[node name="Sprite2" type="Sprite" parent="Popup"]
position = Vector2( -148.182, 24.5455 )
scale = Vector2( 4.5, 4.5 )
texture = ExtResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="Popup"]
margin_left = -102.727
margin_top = -29.0909
margin_right = 37.2727
margin_bottom = 1.90909
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true

[node name="Area2D" type="Area2D" parent="."]
visible = false
position = Vector2( -2.72727, -19.0909 )
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.075

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[node name="Popup2" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.85, 0.85 )

[node name="Sprite" type="Sprite" parent="Popup2"]
texture = ExtResource( 7 )

[node name="Panel" type="Panel" parent="Popup2"]
margin_left = -38.0
margin_right = 40.0
margin_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="Popup2"]
margin_left = -35.0
margin_top = 6.0
margin_right = 113.0
margin_bottom = 75.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "[center]You found a tactical flashlight...it will turn on automatically when entering dark areas."
text = "You found a tactical flashlight...it will turn on automatically when entering dark areas."

[node name="Panel2" type="Panel" parent="Popup2"]
margin_left = -17.2727
margin_top = -39.0909
margin_right = 17.7273
margin_bottom = -4.09091
custom_styles/panel = SubResource( 6 )

[node name="Sprite2" type="Sprite" parent="Popup2"]
position = Vector2( -1.81818, -25.4545 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 8 )

[node name="Timer3" type="Timer" parent="."]
wait_time = 5.5
one_shot = true

[node name="Chatter" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
